Fix Kugou album cover fetching: clean API response tags, improve error logging, and update URL connection handling