@@ -13,10 +13,7 @@ import org.pf4j.Extension;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStream;
-import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URLConnection;
-import java.net.URLEncoder;
+import java.net.*;
 import java.nio.charset.StandardCharsets;
 
 
@@ -268,6 +265,8 @@ public class MainPluginExtension implements PlaybackExtensionPoint {
             // 使用album_id获取专辑信息
             String albumUrl = "http://mobilecdn.kugou.com/api/v3/album/song?version=9108&plat=0&pagesize=100&area_code=1&page=1&with_res_tag=1&albumid=" + albumId;
             String albumResult = getUrlContent(albumUrl);
+            // 删除头尾的 <!--KG_TAG_RES_START--> 和 <!--KG_TAG_RES_END-->
+            albumResult = albumResult.replace("<!--KG_TAG_RES_START-->", "").replace("<!--KG_TAG_RES_END-->", "");
             JsonObject albumJson = JsonParser.parseString(albumResult).getAsJsonObject();
 
             if (!albumJson.has("data") || albumJson.get("data").isJsonNull()) {
@@ -300,6 +299,7 @@ public class MainPluginExtension implements PlaybackExtensionPoint {
             return coverUrl;
         } catch (Exception e) {
             System.err.println("酷狗接口获取封面失败: " + e.getMessage());
+            e.printStackTrace();
         }
         return null;
     }
@@ -307,7 +307,7 @@ public class MainPluginExtension implements PlaybackExtensionPoint {
     private String getUrlContent(String url) {
         StringBuilder content = new StringBuilder();
         try {
-            URLConnection connection = new URI(url).toURL().openConnection();
+            URLConnection connection = new URL(url).openConnection();
             connection.setRequestProperty("User-Agent", "Mozilla/5.0");
             InputStream inputStream = connection.getInputStream();
             BufferedReader reader = new BufferedReader(new java.io.InputStreamReader(inputStream, StandardCharsets.UTF_8));
